traversal.snake.Snake.scala.error
Compilation error:
Snake:16: error: unclosed comment
/*def finished():Boolean ={
^Snake:16: error: unclosed comment
/*def finished():Boolean ={
^Snake:16: error: unclosed comment
/*def finished():Boolean ={
^Snake:1: error: Missing closing brace `}' assumed here
override def run() {
^Snake:1: error: expected start of definition
override def run() {
         ^Snake:16: error: unclosed comment
/*def finished():Boolean ={
^